--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -112,7 +112,7 @@ import Layout from '../layouts/Layout.astro';
         
         <div class="mt-8">
           <a href="https://scholar.google.com/citations?user=PYIV3fcAAAAJ" target="_blank" class="text-sm text-gray-500 hover:text-gray-400">
-            All publications on Google Scholar →
+            Google Scholar →
           </a>
         </div>
       </div>
